--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
-    "postcss": "8.4.23",
+    "axios": "^1.4.0",
+    "daisyui": "^2.51.5",
+    "flowbite": "^1.6.5",
+    "next": "13.3.0",
+    "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-hook-form": "^7.43.9",
+    "sweetalert2": "^11.7.5",
+    "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.1"
   }
 }
